<resources>
    <string name="app_name">LisTugas</string>
    <string name="app_version">b0.001</string>
    <string name="btn_next">Next</string>
    <string name="btn_login">Login</string>
    <string name="login_dont_have_acc">Don\'t have an account yet?</string>
    <string name="signup_have_acc">Already have an account?</string>
    <string name="link_signup">Sign Up</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="onboarding_plan_title">Planning Ahead</string>
    <string name="onboarding_plan_desc">Set your deadline for each assignment so you in control</string>
    <string name="onboarding_collab_title">Collaborate</string>
    <string name="onboarding_collab_desc">Share your reminders with your friends</string>
    <string name="btn_signup">Sign Up</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_password">Password</string>

    <string name="success_youareset">You are Set!</string>

    <!-->Forget Password<-->
    <string name="forgetPassword_title">Forgot Password</string>
    <string name="forgetPassword_New">Input New Password</string>
    <string name="forgetPassword_Repeat">Repeat New Password</string>
    <string name="forgetPassword_btnSubmit">Submit</string>

    <!-->Home<-->
    <string name="home_title">My Home</string>
    <string name="home_empty">Nothing to do !! Take your time !!</string>
    <string name="sort_by">Sort by</string>

    <!-->Calendar<-->
    <string name="calendar_title">My Calendar</string>
    <string name="calendar_agendaTitle">Agenda</string>
    <string name="month">October</string>
    <string name="Sunday">S</string>
    <string name="Monday">M</string>
    <string name="Tuesday">T</string>
    <string name="Wednesday">W</string>
    <string name="Thursday">T</string>
    <string name="Friday">F</string>
    <string name="Saturday">S</string>
    <string name="no1">1</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>

    <!-->History<-->
    <string name="history_title">My History</string>

    <!-->Add Task<-->
    <string name="addtask_title">Add Task</string>
    <string name="addtask_taskTitle">Add Title</string>
    <string name="addtask_end">Deadline</string>
    <string name="addtask_desc">Add Description</string>
    <string name="addtask_priority">Priority</string>
    <string name="addtask_category">Category</string>
    <string name="addtask_addCollaborate">Add people to share with</string>

    <!-->Collaborate<-->
    <string name="collaborate_title">Collaborate</string>

    <!-->Setting<-->
    <string name="Account">Account</string>
    <string name="click">Click for detail</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="Logout">Logout</string>
    <string name="backbutton">back</string>
    <string name="useicon">usericon</string>
    <string name="profile">My Profile</string>
    <string name="usericon">user</string>
    <string name="user">User</string>
    <string name="useremail">user@mail.com</string>
    <string name="upgrade_membership">Upgrade Membership</string>
    <string name="changename">Change Name</string>
    <string name="changepassword">Change Password</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_theme0">Light Theme (Default)</string>
    <string name="setting_theme2">Dark Theme</string>
    <string name="setting_soundnotif">Notification Sound</string>
    <string name="setting_soundnotif_default">Beep Beep (default)</string>
    <string name="setting_soundnotif_change">Change</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav">Home</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_history">History</string>
    <string name="title_setting">Setting</string>

    <!--> View Task <-->
    <string name="viewtask_title">Details</string>

</resources>